fixes align-items and h1 tags

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,9 +167,6 @@ div.content > h1 {
   font-size: 3.5em;
   margin-top: 0;
   text-align: center;
-  -webkit-box-flex: 1 100%;
-  -moz-box-flex:  1 100%;
-  flex: 1 100%;
 
   -webkit-box-ordinal-group: 1;
   -moz-box-ordinal-group: 1;
@@ -180,7 +177,7 @@ div.content > h1 {
 /* Education */
 
 div#education > div.content {
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -306,6 +303,9 @@ div.proj {
 
 div#projects > div.content > h1 {
   margin: 60px auto 0 auto;
+  -webkit-box-flex: 1 100%;
+  -moz-box-flex:  1 100%;
+  flex: 1 100%;
 }
 
 div.proj > p {
@@ -377,6 +377,9 @@ div#skills > div.content {
 div#skills > div.content > h1 {
   margin-top: 60px;
   margin-bottom: 20px;
+  -webkit-box-flex: 1 100%;
+  -moz-box-flex:  1 100%;
+  flex: 1 100%;
 }
 
 div.lang {
